src/App.css
#root {

  --background-color:#f0f1f1;
  --background-color-dark:#353739;
  --card-color:#fff;
  --card-color-dark: #252627;
  margin: 0 auto;
}

.logo {
  height: 6em;
  padding: 1.5em;
  will-change: filter;
  transition: filter 300ms;
}
.logo:hover {
  filter: drop-shadow(0 0 2em #646cffaa);
}
.logo.react:hover {
  filter: drop-shadow(0 0 2em #61dafbaa);
}

@keyframes logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

@media (prefers-reduced-motion: no-preference) {
  a:nth-of-type(2) .logo {
    animation: logo-spin infinite 20s linear;
  }
}

.card {
  padding: 2em;
}

.read-the-docs {
  color: #888;
}
.page-grid{
  display: grid;
  grid: auto-flow / 4fr 2fr;
  background-color: var(--background-color-dark);
  padding: 1em;
}
@media (max-width: 1100px) {
  .page-grid{
    display: grid;
    grid: auto-flow / 1fr;
  }
}
.delivery{
  position: sticky;
  top: 15px;
  height: 100vh;
  box-sizing: border-box;
  justify-self: right;
}

.product-grid{
  display: grid;
  grid-template-columns: 30px 3fr 1fr 1fr 1fr 1fr 1fr;
}
.product-card{
  border-bottom: 1px solid rgba(255,255,255,0.1);
  width: 100%;
  margin-top: 10px;
  margin-bottom: 10px;
  padding:3px;
}
.grid-title{
  font-weight: bold;
}
.unit-button{
  width: 25px;
  height: 25px;
  padding:0px;
  margin:0px;
  border:0px;
}
.grand-total{
  justify-content: right;
  display: flex;
}
.recurring-order{
  justify-content: right;
  display: flex;
}
.minus-button{
  width: 25px;
  height: 25px;
  padding:0px;
  margin:0px;
  border:0px;
  cursor:pointer;
  background-color: transparent;
}
#minus-thing{
  cursor:pointer;
}
.minus-button:hover{
  cursor: pointer;
}
.rebate-question{
  display: inline;
}
.question-img{
  height:8px;
  width:8px;
  filter: invert(70%);
  padding:1px;
  margin:2px;
  border: 1px solid #646cffaa;
  border-radius: 10px;
}
.floating-rebate-card{
  position: absolute;
  display: block;
}
.delivery-form{
  background-color: var(--card-color-dark);
  border-radius: 1em;
  padding: 1em;
  margin: 1em;

  width: 400px;
  /* Form outline */
}
.delivery-form ul {
  list-style: none;
  padding: 0;
  margin: 0;
}
.delivery-form li + li{
  margin-top: 1em;
  list-style-type: none;
}
.delivery-form label {
  /* Uniform size & alignment */
  display: inline-block;
  text-align: left;
}
.delivery-form input,
textarea {
  display: flex;
  /* To make sure that all text fields have the same font settings
     By default, textareas have a monospace font */
  font: 1em sans-serif;

  /* Uniform text field size */
  width: 400px;
  box-sizing: border-box;

  /* Match form field borders */
  border: 1px solid #999;
}

.delivery-form #checkbox{
  width:auto;
}
.delivery-form button{
  border: 1px solid #ccc;
  border-radius: 1em;
  background-color: var(--card-color-dark);
}
.delivery-form button:hover{
  cursor: pointer;
  background-color: #0ab100;
  border-color:#535bf2;
}

#validZip{
  display:none;
}


.suggestion-grid{
display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 10px;
}
.suggestion-card{
  /* Form outline */
  padding: 0.75em;
  border: 1px solid #ccc;
  border-radius: 1em;
  display:block;
  background-color: var(--card-color-dark);
  width: 15em;
  justify-self: center;
}
.suggestion-card:hover{
  background-color: #0ab100;
  border-color:#535bf2;
  cursor: pointer;
}
.suggestions{
  padding: 10px;
}

.accept-condition{
display: flex;
}

.background-box{
  background-color: var(--card-color-dark);
  border-radius: 1em;
  padding: 1em;
  margin: 1em;
}


@media (prefers-color-scheme: light) {
    .delivery-form{
        background-color: var(--card-color);
    }
    .delivery-form button{
        border: 1px solid #ccc;
        background-color: var(--card-color);
    }
    .suggestion-card{
        background-color: var(--card-color);
    }
    .background-box{
        background-color: var(--card-color);
    }
    .page-grid{
        background-color: var(--background-color);
    }
}
.header-logo{
  position:sticky;
  top:0px;
  background-color: #1a1a1a;
  z-index: 100;
}

